--- a/Project1CSS.css
+++ b/Project1CSS.css
@@ -1,6 +1,7 @@
 body {
-    border-style: double;
-    border-width: 5px;
+	border-style: double;
+	border-width: 5px;
+	background-color: #d6f5f5;
 }
 
 #pageTitle {
