--- a/Project1CSS.css
+++ b/Project1CSS.css
@@ -6,7 +6,7 @@ body {
 
 #pageTitle {
     border-style: solid;
-    background-color: lightblue;
+    background-color: #e6ccff;
     text-align: center;
     font-family: Times, Georgia;
     font-weight: bold;
